Add timer and configurable ip address.

--- a/apps/rtsp-player/index.html
+++ b/apps/rtsp-player/index.html
@@ -19,7 +19,7 @@
 
   <div id="out-container">
     <div class="videoContainer">
-      <video id="media" src="http://10.240.8.41/mm-test/test.webm" controls="controls" autoplay="true">
+      <video id="media" src="" autoplay="true">
         Your browser does not support the video tag.
       </video>
       <div id="timer">
@@ -53,6 +53,6 @@
       </ul>
     </div>
   </div>
-
+  <script src='./player.js'></script>
 </body>
 </html>
