Update Settgins APP, Add default value in rtsp-player.

--- a/apps/rtsp-player/index.html
+++ b/apps/rtsp-player/index.html
@@ -11,7 +11,7 @@
   <div class="input-container">
     <div id="input-wrapper">
       <p>IP address:
-        <input type="text" id="ipaddr" />
+        <input type="text" id="ipaddr" placeholder="10.240.8.10:8900"/>
       </p>
     </div>
     <button id="btn" type="submit" >OK</button>
