update wifi page style.

--- a/apps/settings/elements/wifi.html
+++ b/apps/settings/elements/wifi.html
@@ -19,13 +19,12 @@
         <li class="wps-column">
           <a id="tv-wps-a">
             <span data-l10n-id="wpsMessage">Connect with WPS</span>
-            <small data-l10n-id="wpsDescription2">Automatic Wi-Fi setup</small>
           </a>
         </li>
       </ul>
 
       <header>
-        <h2 id="tv-wifi-sub-header" data-l10n-id="availableNetworks"> Available Networks </h2>
+        <h2 id="tv-wifi-sub-header"> AVAILABLE NETWORKS </h2>
       </header>
       <ul class="wifi-availableNetworks" data-state="off">
         <li class="explanation" data-state="off" data-l10n-id="wifi-disabled">
